###### TWE 4.6-1 RELEASED ######
2012-07-23 Sasa Bojanic <sasaboy@together.at>
   # Documentation: chapter Build Guide put at the end (before Release Notes)

2012-06-13 Sasa Bojanic <sasaboy@together.at>
   # changes related to linux builds with TAB

2012-05-29 Sasa Bojanic <sasaboy@together.at>
   # Modified NSIS script to use windows' "cacls.exe" to change access controls to allow everyone to writte into installation's config folder
    (TWE installation had a problem when User Access Controls (UAC) were set to the "higher level" like "Always notify" - couldn't switch configuration)

2012-05-24 Sasa Bojanic <sasaboy@together.at>
   # Changed package names for HistoryMgr and UndoHistoryMgr so all the JAR files are using different package names

###### TWE 4.5-1 RELEASED ######
2012-05-09 Sasa Bojanic <sasaboy@together.at>
   # distribution component output is now zipped into the txm-x.y-z.comp.zip
   # setup exe now supports only Java 7
   
2012-05-08 Sasa Bojanic <sasaboy@together.at>
   # signing JAR files with Together certificate canceled til the next release

2012-04-23 Sasa Bojanic <sasaboy@together.at>
   # Documentation folder removed from distribution

2012-04-09 Sasa Bojanic <sasaboy@together.at>
   # signing JAR files with Together certificate

2012-02-23 Sasa Bojanic <sasaboy@together.at>
   # Compiled code can be executed only with Java7

###### TWE 4.4-1 RELEASED ######
2011-12-26 Sasa Bojanic <sasaboy@together.at>
  # Linux builds improved

2011-12-15 Sasa Bojanic <sasaboy@together.at>
  # jxpdl.jar updated
  # Shark mode: Reporting an error if Name fields of WorkflowProcess/Activity, Id fields of WorkflowProcess/Activity
    or ExceptionName field length is inappropriate
  # TSL licensed version now goes to distributions's twe folder
  # silent setup now also available for TSL licensed version
  # Allowing saving of XPDLs with validation warnings in "Released" XPDL Publication Status
  # WfXML: URL sample displayed