@@ -160,6 +160,8 @@
 			<arg line="/DOUT_DIR=&quot;${dist.community.dir}&quot;" />
 			<arg line="/DLICENSE=&quot;${license.path}&quot;" />
 			<arg line="/DLANGUAGE=${language}" />
+         <arg line="/DSERVER_TIMEOUT=&quot;${server.timeout}&quot;" />
+         <arg line="/DBUILDID=&quot;${build.timestamp}&quot;" />
 			<arg line="${nsis.script}" />
 		</exec>
 
