@@ -19,7 +19,7 @@
 inst.dir=C:\Program Files\twe-@VERSION@-@RELEASE@
 
 # Path to local java installation (mandatory - has no default value)
-jdk.dir=C:\Program Files\Java\jdk1.7.0_03
+jdk.dir=C:\Program Files\Java\jdk1.7.0_05
 
 # Startup menu name. (default value - Together Workflow Editor @VERSION@-@RELEASE@)
 startup.menu.name=Together Workflow Editor @VERSION@-@RELEASE@
@@ -27,7 +27,9 @@ startup.menu.name=Together Workflow Editor @VERSION@-@RELEASE@
 # Create start menu entry (on/off)
 create.startup.menu=on
 # Create quick launch icon (on/off)
-create.quick.launch.icon=on
+create.quick.launch.icon=off
 # Create desktop icon (on/off)
 create.desktop.icon=on
+# Create pin to taskbar (on/off)
+create.pin.to.taskbar=on
 
